fixed some layout issues on mobile side

--- a/frontend/src/sass/layout/_drawer.scss
+++ b/frontend/src/sass/layout/_drawer.scss
@@ -35,7 +35,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
     text-align: center;
     align-items: stretch;
 
